fixed tablet scaling and scrollbars

--- a/src/styles/master.css
+++ b/src/styles/master.css
@@ -800,6 +800,24 @@ a {
 
 }
 
+.cardList::-webkit-scrollbar {
+    width: 4px;
+    background-color: black;
+    color: black;
+
+
+}
+
+.cardList::-webkit-scrollbar-track {
+    background-color: purple;
+}
+
+.cardList::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+
 .titleOfCard {
   height: 25%;
   background-color: #915e5e;
@@ -887,6 +905,10 @@ li, p {
     font-size: 75px;
   }
 
+  .projectCard {
+    grid-column: span 12 !important;
+  }
+
   .contactModal {
     top: 25%;
   }
@@ -919,9 +941,6 @@ li, p {
 
     .projectFlex {
       width: 100vw !important;
-    }
-    .projectCard {
-      grid-column: span 12 !important;
     }
 
     .gridItemContent {
@@ -1043,4 +1062,20 @@ li, p {
   to {
     box-shadow: 0 0 6px 6px block;
   }
+}
+
+
+/* Scroll bar */
+
+::-webkit-scrollbar {
+    width: 0;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
